# Bookly-AI-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.lite  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  test_extension.py
alembic/: env.py  script.py.mako
alembic/versions/: 4252c7665c84_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py  security.py
app/models/: __init__.py  book.py  reading.py  user.py
app/routes/: __init__.py  auth.py  books.py  extension.py  narration.py  reading.py  users.py
app/schemas/: auth.py  book.py  reading.py  user.py
app/services/: affect.py  ai.py  cache.py  content.py  covers.py  emotion.py  extraction.py  narration.py  processing.py  storage.py  synthesis.py  tts.py
deploy/: Caddyfile  docker-compose.yml
postman/: bookly-api.postman_collection.json  local.postman_environment.json
