[project]
name = "bookly-api"
version = "0.1.0"
description = "Backend for Bookly, a personal AI-assisted book library"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.49",
    "sqlalchemy[asyncio]>=2.0.50,<2.1",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "pydantic[email]>=2.13",
    "pydantic-settings>=2.14",
    "pyjwt>=2.13",
    "pwdlib[argon2]>=0.3",
    "python-multipart>=0.0.32",
    "pymupdf>=1.27",
    "numpy>=1.26",
    "edge-tts>=7.0",
    "onnxruntime>=1.20",
    "tokenizers>=0.20",
]

[project.optional-dependencies]
tts-torch = ["kokoro>=0.9.4", "en-core-web-sm"]
tts-onnx = ["kokoro-onnx>=0.5"]

[dependency-groups]
dev = ["httpx>=0.28"]

[tool.uv]
package = false

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
